Final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT
    DIV
    EXP

Grammar

Rule 0     S' -> start
Rule 1     start -> dataType identifier SEMICOL
Rule 2     start -> FOR LP initialize SEMICOL condition SEMICOL update RP body
Rule 3     start -> SWITCH LP ID RP LCP caseBlocks RCP
Rule 4     start -> CLASS ID LCP classBlock RCP SEMICOL
Rule 5     start -> return ID SCOPEOP ID LP parameters RP optional LCP statements RCP
Rule 6     start -> CLASS ID COLON accesstype ID LCP statements RCP
Rule 7     empty -> <empty>
Rule 8     dataType -> INT
Rule 9     dataType -> FLOAT
Rule 10    dataType -> CHAR
Rule 11    dataType -> DOUBLE
Rule 12    dataType -> BOOL
Rule 13    dataType -> AUTO
Rule 14    return -> INT
Rule 15    return -> FLOAT
Rule 16    return -> CHAR
Rule 17    return -> DOUBLE
Rule 18    return -> BOOL
Rule 19    return -> VOID
Rule 20    return -> AUTO
Rule 21    statements -> statements terminal
Rule 22    statements -> terminal
Rule 23    terminal -> ID
Rule 24    terminal -> dataType
Rule 25    terminal -> operator
Rule 26    terminal -> SEMICOL
Rule 27    terminal -> NUMBER
Rule 28    terminal -> empty
Rule 29    identifier -> identifier COMMA ident
Rule 30    identifier -> ident
Rule 31    ident -> pre ID post
Rule 32    pre -> POINTER
Rule 33    pre -> empty
Rule 34    post -> LSP NUMBER RSP
Rule 35    post -> empty
Rule 36    initialize -> dataType ID EQUALS rvalue
Rule 37    initialize -> ID EQUALS rvalue
Rule 38    initialize -> rvalue
Rule 39    initialize -> empty
Rule 40    rvalue -> ID
Rule 41    rvalue -> NUMBER
Rule 42    condition -> ID operator rvalue
Rule 43    condition -> NOT rvalue
Rule 44    condition -> empty
Rule 45    operator -> GT
Rule 46    operator -> LT
Rule 47    operator -> GTE
Rule 48    operator -> LTE
Rule 49    operator -> EE
Rule 50    operator -> NE
Rule 51    update -> ID PLUS PLUS
Rule 52    update -> PLUS PLUS ID
Rule 53    update -> ID MINUS MINUS
Rule 54    update -> MINUS MINUS ID
Rule 55    update -> empty
Rule 56    body -> LCP statements RCP
Rule 57    body -> SEMICOL LCP statements RCP
Rule 58    caseBlocks -> caseBlocks caseEnd
Rule 59    caseBlocks -> caseEnd
Rule 60    caseEnd -> CASE rvalue COLON empty
Rule 61    caseEnd -> empty
Rule 62    classBlock -> classBlock classEnd
Rule 63    classBlock -> classEnd
Rule 64    classEnd -> access COLON classStatements
Rule 65    classEnd -> empty
Rule 66    access -> PRIVATE
Rule 67    access -> PUBLIC
Rule 68    access -> PROTECTED
Rule 69    classStatements -> return ID LP parameters RP SEMICOL
Rule 70    classStatements -> dataType identifier SEMICOL
Rule 71    classStatements -> empty
Rule 72    parameters -> parameters COMMA param
Rule 73    parameters -> param
Rule 74    param -> dataType ID
Rule 75    param -> empty
Rule 76    optional -> COLON initList
Rule 77    optional -> empty
Rule 78    initList -> initList COMMA paraTerminal
Rule 79    initList -> paraTerminal
Rule 80    paraTerminal -> ID LP ID RP
Rule 81    accesstype -> PRIVATE
Rule 82    accesstype -> PUBLIC
Rule 83    accesstype -> PROTECTED
Rule 84    accesstype -> empty

Terminals, with rules where they appear

AUTO                 : 13 20
BOOL                 : 12 18
CASE                 : 60
CHAR                 : 10 16
CLASS                : 4 6
COLON                : 6 60 64 76
COMMA                : 29 72 78
DEFAULT              : 
DIV                  : 
DOUBLE               : 11 17
EE                   : 49
EQUALS               : 36 37
EXP                  : 
FLOAT                : 9 15
FOR                  : 2
GT                   : 45
GTE                  : 47
ID                   : 3 4 5 5 6 6 23 31 36 37 40 42 51 52 53 54 69 74 80 80
INT                  : 8 14
LCP                  : 3 4 5 6 56 57
LP                   : 2 3 5 69 80
LSP                  : 34
LT                   : 46
LTE                  : 48
MINUS                : 53 53 54 54
NE                   : 50
NOT                  : 43
NUMBER               : 27 34 41
PLUS                 : 51 51 52 52
POINTER              : 32
PRIVATE              : 66 81
PROTECTED            : 68 83
PUBLIC               : 67 82
RCP                  : 3 4 5 6 56 57
RP                   : 2 3 5 69 80
RSP                  : 34
SCOPEOP              : 5
SEMICOL              : 1 2 2 4 26 57 69 70
SWITCH               : 3
VOID                 : 19
error                : 

Nonterminals, with rules where they appear

access               : 64
accesstype           : 6
body                 : 2
caseBlocks           : 3 58
caseEnd              : 58 59
classBlock           : 4 62
classEnd             : 62 63
classStatements      : 64
condition            : 2
dataType             : 1 24 36 70 74
empty                : 28 33 35 39 44 55 60 61 65 71 75 77 84
ident                : 29 30
identifier           : 1 29 70
initList             : 76 78
initialize           : 2
operator             : 25 42
optional             : 5
paraTerminal         : 78 79
param                : 72 73
parameters           : 5 69 72
post                 : 31
pre                  : 31
return               : 5 69
rvalue               : 36 37 38 42 43 60
start                : 0
statements           : 5 6 21 56 57
terminal             : 21 22
update               : 2

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . dataType identifier SEMICOL
    (2) start -> . FOR LP initialize SEMICOL condition SEMICOL update RP body
    (3) start -> . SWITCH LP ID RP LCP caseBlocks RCP
    (4) start -> . CLASS ID LCP classBlock RCP SEMICOL
    (5) start -> . return ID SCOPEOP ID LP parameters RP optional LCP statements RCP
    (6) start -> . CLASS ID COLON accesstype ID LCP statements RCP
    (8) dataType -> . INT
    (9) dataType -> . FLOAT
    (10) dataType -> . CHAR
    (11) dataType -> . DOUBLE
    (12) dataType -> . BOOL
    (13) dataType -> . AUTO
    (14) return -> . INT
    (15) return -> . FLOAT
    (16) return -> . CHAR
    (17) return -> . DOUBLE
    (18) return -> . BOOL
    (19) return -> . VOID
    (20) return -> . AUTO

    FOR             shift and go to state 3
    SWITCH          shift and go to state 4
    CLASS           shift and go to state 5
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 9
    DOUBLE          shift and go to state 10
    BOOL            shift and go to state 11
    AUTO            shift and go to state 12
    VOID            shift and go to state 13

    start                          shift and go to state 1
    dataType                       shift and go to state 2
    return                         shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> dataType . identifier SEMICOL
    (29) identifier -> . identifier COMMA ident
    (30) identifier -> . ident
    (31) ident -> . pre ID post
    (32) pre -> . POINTER
    (33) pre -> . empty
    (7) empty -> .

    POINTER         shift and go to state 17
    ID              reduce using rule 7 (empty -> .)

    identifier                     shift and go to state 14
    ident                          shift and go to state 15
    pre                            shift and go to state 16
    empty                          shift and go to state 18

state 3

    (2) start -> FOR . LP initialize SEMICOL condition SEMICOL update RP body

    LP              shift and go to state 19


state 4

    (3) start -> SWITCH . LP ID RP LCP caseBlocks RCP

    LP              shift and go to state 20


state 5

    (4) start -> CLASS . ID LCP classBlock RCP SEMICOL
    (6) start -> CLASS . ID COLON accesstype ID LCP statements RCP

    ID              shift and go to state 21


state 6

    (5) start -> return . ID SCOPEOP ID LP parameters RP optional LCP statements RCP

    ID              shift and go to state 22


state 7

    (8) dataType -> INT .
    (14) return -> INT .

  ! reduce/reduce conflict for ID resolved using rule 8 (dataType -> INT .)
    POINTER         reduce using rule 8 (dataType -> INT .)
    ID              reduce using rule 8 (dataType -> INT .)

  ! ID              [ reduce using rule 14 (return -> INT .) ]


state 8

    (9) dataType -> FLOAT .
    (15) return -> FLOAT .

  ! reduce/reduce conflict for ID resolved using rule 9 (dataType -> FLOAT .)
    POINTER         reduce using rule 9 (dataType -> FLOAT .)
    ID              reduce using rule 9 (dataType -> FLOAT .)

  ! ID              [ reduce using rule 15 (return -> FLOAT .) ]


state 9

    (10) dataType -> CHAR .
    (16) return -> CHAR .

  ! reduce/reduce conflict for ID resolved using rule 10 (dataType -> CHAR .)
    POINTER         reduce using rule 10 (dataType -> CHAR .)
    ID              reduce using rule 10 (dataType -> CHAR .)

  ! ID              [ reduce using rule 16 (return -> CHAR .) ]


state 10

    (11) dataType -> DOUBLE .
    (17) return -> DOUBLE .

  ! reduce/reduce conflict for ID resolved using rule 11 (dataType -> DOUBLE .)
    POINTER         reduce using rule 11 (dataType -> DOUBLE .)
    ID              reduce using rule 11 (dataType -> DOUBLE .)

  ! ID              [ reduce using rule 17 (return -> DOUBLE .) ]


state 11

    (12) dataType -> BOOL .
    (18) return -> BOOL .

  ! reduce/reduce conflict for ID resolved using rule 12 (dataType -> BOOL .)
    POINTER         reduce using rule 12 (dataType -> BOOL .)
    ID              reduce using rule 12 (dataType -> BOOL .)

  ! ID              [ reduce using rule 18 (return -> BOOL .) ]


state 12

    (13) dataType -> AUTO .
    (20) return -> AUTO .

  ! reduce/reduce conflict for ID resolved using rule 13 (dataType -> AUTO .)
    POINTER         reduce using rule 13 (dataType -> AUTO .)
    ID              reduce using rule 13 (dataType -> AUTO .)

  ! ID              [ reduce using rule 20 (return -> AUTO .) ]


state 13

    (19) return -> VOID .

    ID              reduce using rule 19 (return -> VOID .)


state 14

    (1) start -> dataType identifier . SEMICOL
    (29) identifier -> identifier . COMMA ident

    SEMICOL         shift and go to state 23
    COMMA           shift and go to state 24


state 15

    (30) identifier -> ident .

    SEMICOL         reduce using rule 30 (identifier -> ident .)
    COMMA           reduce using rule 30 (identifier -> ident .)


state 16

    (31) ident -> pre . ID post

    ID              shift and go to state 25


state 17

    (32) pre -> POINTER .

    ID              reduce using rule 32 (pre -> POINTER .)


state 18

    (33) pre -> empty .

    ID              reduce using rule 33 (pre -> empty .)


state 19

    (2) start -> FOR LP . initialize SEMICOL condition SEMICOL update RP body
    (36) initialize -> . dataType ID EQUALS rvalue
    (37) initialize -> . ID EQUALS rvalue
    (38) initialize -> . rvalue
    (39) initialize -> . empty
    (8) dataType -> . INT
    (9) dataType -> . FLOAT
    (10) dataType -> . CHAR
    (11) dataType -> . DOUBLE
    (12) dataType -> . BOOL
    (13) dataType -> . AUTO
    (40) rvalue -> . ID
    (41) rvalue -> . NUMBER
    (7) empty -> .

    ID              shift and go to state 28
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    DOUBLE          shift and go to state 34
    BOOL            shift and go to state 35
    AUTO            shift and go to state 36
    NUMBER          shift and go to state 37
    SEMICOL         reduce using rule 7 (empty -> .)

    initialize                     shift and go to state 26
    dataType                       shift and go to state 27
    rvalue                         shift and go to state 29
    empty                          shift and go to state 30

state 20

    (3) start -> SWITCH LP . ID RP LCP caseBlocks RCP

    ID              shift and go to state 38


state 21

    (4) start -> CLASS ID . LCP classBlock RCP SEMICOL
    (6) start -> CLASS ID . COLON accesstype ID LCP statements RCP

    LCP             shift and go to state 39
    COLON           shift and go to state 40


state 22

    (5) start -> return ID . SCOPEOP ID LP parameters RP optional LCP statements RCP

    SCOPEOP         shift and go to state 41


state 23

    (1) start -> dataType identifier SEMICOL .

    $end            reduce using rule 1 (start -> dataType identifier SEMICOL .)


state 24

    (29) identifier -> identifier COMMA . ident
    (31) ident -> . pre ID post
    (32) pre -> . POINTER
    (33) pre -> . empty
    (7) empty -> .

    POINTER         shift and go to state 17
    ID              reduce using rule 7 (empty -> .)

    ident                          shift and go to state 42
    pre                            shift and go to state 16
    empty                          shift and go to state 18

state 25

    (31) ident -> pre ID . post
    (34) post -> . LSP NUMBER RSP
    (35) post -> . empty
    (7) empty -> .

    LSP             shift and go to state 44
    SEMICOL         reduce using rule 7 (empty -> .)
    COMMA           reduce using rule 7 (empty -> .)

    post                           shift and go to state 43
    empty                          shift and go to state 45

state 26

    (2) start -> FOR LP initialize . SEMICOL condition SEMICOL update RP body

    SEMICOL         shift and go to state 46


state 27

    (36) initialize -> dataType . ID EQUALS rvalue

    ID              shift and go to state 47


state 28

    (37) initialize -> ID . EQUALS rvalue
    (40) rvalue -> ID .

    EQUALS          shift and go to state 48
    SEMICOL         reduce using rule 40 (rvalue -> ID .)


state 29

    (38) initialize -> rvalue .

    SEMICOL         reduce using rule 38 (initialize -> rvalue .)


state 30

    (39) initialize -> empty .

    SEMICOL         reduce using rule 39 (initialize -> empty .)


state 31

    (8) dataType -> INT .

    ID              reduce using rule 8 (dataType -> INT .)
    RCP             reduce using rule 8 (dataType -> INT .)
    SEMICOL         reduce using rule 8 (dataType -> INT .)
    NUMBER          reduce using rule 8 (dataType -> INT .)
    INT             reduce using rule 8 (dataType -> INT .)
    FLOAT           reduce using rule 8 (dataType -> INT .)
    CHAR            reduce using rule 8 (dataType -> INT .)
    DOUBLE          reduce using rule 8 (dataType -> INT .)
    BOOL            reduce using rule 8 (dataType -> INT .)
    AUTO            reduce using rule 8 (dataType -> INT .)
    GT              reduce using rule 8 (dataType -> INT .)
    LT              reduce using rule 8 (dataType -> INT .)
    GTE             reduce using rule 8 (dataType -> INT .)
    LTE             reduce using rule 8 (dataType -> INT .)
    EE              reduce using rule 8 (dataType -> INT .)
    NE              reduce using rule 8 (dataType -> INT .)


state 32

    (9) dataType -> FLOAT .

    ID              reduce using rule 9 (dataType -> FLOAT .)
    RCP             reduce using rule 9 (dataType -> FLOAT .)
    SEMICOL         reduce using rule 9 (dataType -> FLOAT .)
    NUMBER          reduce using rule 9 (dataType -> FLOAT .)
    INT             reduce using rule 9 (dataType -> FLOAT .)
    FLOAT           reduce using rule 9 (dataType -> FLOAT .)
    CHAR            reduce using rule 9 (dataType -> FLOAT .)
    DOUBLE          reduce using rule 9 (dataType -> FLOAT .)
    BOOL            reduce using rule 9 (dataType -> FLOAT .)
    AUTO            reduce using rule 9 (dataType -> FLOAT .)
    GT              reduce using rule 9 (dataType -> FLOAT .)
    LT              reduce using rule 9 (dataType -> FLOAT .)
    GTE             reduce using rule 9 (dataType -> FLOAT .)
    LTE             reduce using rule 9 (dataType -> FLOAT .)
    EE              reduce using rule 9 (dataType -> FLOAT .)
    NE              reduce using rule 9 (dataType -> FLOAT .)


state 33

    (10) dataType -> CHAR .

    ID              reduce using rule 10 (dataType -> CHAR .)
    RCP             reduce using rule 10 (dataType -> CHAR .)
    SEMICOL         reduce using rule 10 (dataType -> CHAR .)
    NUMBER          reduce using rule 10 (dataType -> CHAR .)
    INT             reduce using rule 10 (dataType -> CHAR .)
    FLOAT           reduce using rule 10 (dataType -> CHAR .)
    CHAR            reduce using rule 10 (dataType -> CHAR .)
    DOUBLE          reduce using rule 10 (dataType -> CHAR .)
    BOOL            reduce using rule 10 (dataType -> CHAR .)
    AUTO            reduce using rule 10 (dataType -> CHAR .)
    GT              reduce using rule 10 (dataType -> CHAR .)
    LT              reduce using rule 10 (dataType -> CHAR .)
    GTE             reduce using rule 10 (dataType -> CHAR .)
    LTE             reduce using rule 10 (dataType -> CHAR .)
    EE              reduce using rule 10 (dataType -> CHAR .)
    NE              reduce using rule 10 (dataType -> CHAR .)


state 34

    (11) dataType -> DOUBLE .

    ID              reduce using rule 11 (dataType -> DOUBLE .)
    RCP             reduce using rule 11 (dataType -> DOUBLE .)
    SEMICOL         reduce using rule 11 (dataType -> DOUBLE .)
    NUMBER          reduce using rule 11 (dataType -> DOUBLE .)
    INT             reduce using rule 11 (dataType -> DOUBLE .)
    FLOAT           reduce using rule 11 (dataType -> DOUBLE .)
    CHAR            reduce using rule 11 (dataType -> DOUBLE .)
    DOUBLE          reduce using rule 11 (dataType -> DOUBLE .)
    BOOL            reduce using rule 11 (dataType -> DOUBLE .)
    AUTO            reduce using rule 11 (dataType -> DOUBLE .)
    GT              reduce using rule 11 (dataType -> DOUBLE .)
    LT              reduce using rule 11 (dataType -> DOUBLE .)
    GTE             reduce using rule 11 (dataType -> DOUBLE .)
    LTE             reduce using rule 11 (dataType -> DOUBLE .)
    EE              reduce using rule 11 (dataType -> DOUBLE .)
    NE              reduce using rule 11 (dataType -> DOUBLE .)


state 35

    (12) dataType -> BOOL .

    ID              reduce using rule 12 (dataType -> BOOL .)
    RCP             reduce using rule 12 (dataType -> BOOL .)
    SEMICOL         reduce using rule 12 (dataType -> BOOL .)
    NUMBER          reduce using rule 12 (dataType -> BOOL .)
    INT             reduce using rule 12 (dataType -> BOOL .)
    FLOAT           reduce using rule 12 (dataType -> BOOL .)
    CHAR            reduce using rule 12 (dataType -> BOOL .)
    DOUBLE          reduce using rule 12 (dataType -> BOOL .)
    BOOL            reduce using rule 12 (dataType -> BOOL .)
    AUTO            reduce using rule 12 (dataType -> BOOL .)
    GT              reduce using rule 12 (dataType -> BOOL .)
    LT              reduce using rule 12 (dataType -> BOOL .)
    GTE             reduce using rule 12 (dataType -> BOOL .)
    LTE             reduce using rule 12 (dataType -> BOOL .)
    EE              reduce using rule 12 (dataType -> BOOL .)
    NE              reduce using rule 12 (dataType -> BOOL .)


state 36

    (13) dataType -> AUTO .

    ID              reduce using rule 13 (dataType -> AUTO .)
    RCP             reduce using rule 13 (dataType -> AUTO .)
    SEMICOL         reduce using rule 13 (dataType -> AUTO .)
    NUMBER          reduce using rule 13 (dataType -> AUTO .)
    INT             reduce using rule 13 (dataType -> AUTO .)
    FLOAT           reduce using rule 13 (dataType -> AUTO .)
    CHAR            reduce using rule 13 (dataType -> AUTO .)
    DOUBLE          reduce using rule 13 (dataType -> AUTO .)
    BOOL            reduce using rule 13 (dataType -> AUTO .)
    AUTO            reduce using rule 13 (dataType -> AUTO .)
    GT              reduce using rule 13 (dataType -> AUTO .)
    LT              reduce using rule 13 (dataType -> AUTO .)
    GTE             reduce using rule 13 (dataType -> AUTO .)
    LTE             reduce using rule 13 (dataType -> AUTO .)
    EE              reduce using rule 13 (dataType -> AUTO .)
    NE              reduce using rule 13 (dataType -> AUTO .)


state 37

    (41) rvalue -> NUMBER .

    SEMICOL         reduce using rule 41 (rvalue -> NUMBER .)
    COLON           reduce using rule 41 (rvalue -> NUMBER .)


state 38

    (3) start -> SWITCH LP ID . RP LCP caseBlocks RCP

    RP              shift and go to state 49


state 39

    (4) start -> CLASS ID LCP . classBlock RCP SEMICOL
    (62) classBlock -> . classBlock classEnd
    (63) classBlock -> . classEnd
    (64) classEnd -> . access COLON classStatements
    (65) classEnd -> . empty
    (66) access -> . PRIVATE
    (67) access -> . PUBLIC
    (68) access -> . PROTECTED
    (7) empty -> .

  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
    PRIVATE         shift and go to state 54
    PUBLIC          shift and go to state 55
    PROTECTED       shift and go to state 56
    RCP             reduce using rule 7 (empty -> .)

  ! PRIVATE         [ reduce using rule 7 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 7 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 7 (empty -> .) ]

    classBlock                     shift and go to state 50
    classEnd                       shift and go to state 51
    access                         shift and go to state 52
    empty                          shift and go to state 53

state 40

    (6) start -> CLASS ID COLON . accesstype ID LCP statements RCP
    (81) accesstype -> . PRIVATE
    (82) accesstype -> . PUBLIC
    (83) accesstype -> . PROTECTED
    (84) accesstype -> . empty
    (7) empty -> .

    PRIVATE         shift and go to state 58
    PUBLIC          shift and go to state 59
    PROTECTED       shift and go to state 60
    ID              reduce using rule 7 (empty -> .)

    accesstype                     shift and go to state 57
    empty                          shift and go to state 61

state 41

    (5) start -> return ID SCOPEOP . ID LP parameters RP optional LCP statements RCP

    ID              shift and go to state 62


state 42

    (29) identifier -> identifier COMMA ident .

    SEMICOL         reduce using rule 29 (identifier -> identifier COMMA ident .)
    COMMA           reduce using rule 29 (identifier -> identifier COMMA ident .)


state 43

    (31) ident -> pre ID post .

    SEMICOL         reduce using rule 31 (ident -> pre ID post .)
    COMMA           reduce using rule 31 (ident -> pre ID post .)


state 44

    (34) post -> LSP . NUMBER RSP

    NUMBER          shift and go to state 63


state 45

    (35) post -> empty .

    SEMICOL         reduce using rule 35 (post -> empty .)
    COMMA           reduce using rule 35 (post -> empty .)


state 46

    (2) start -> FOR LP initialize SEMICOL . condition SEMICOL update RP body
    (42) condition -> . ID operator rvalue
    (43) condition -> . NOT rvalue
    (44) condition -> . empty
    (7) empty -> .

    ID              shift and go to state 65
    NOT             shift and go to state 66
    SEMICOL         reduce using rule 7 (empty -> .)

    condition                      shift and go to state 64
    empty                          shift and go to state 67

state 47

    (36) initialize -> dataType ID . EQUALS rvalue

    EQUALS          shift and go to state 68


state 48

    (37) initialize -> ID EQUALS . rvalue
    (40) rvalue -> . ID
    (41) rvalue -> . NUMBER

    ID              shift and go to state 69
    NUMBER          shift and go to state 37

    rvalue                         shift and go to state 70

state 49

    (3) start -> SWITCH LP ID RP . LCP caseBlocks RCP

    LCP             shift and go to state 71


state 50

    (4) start -> CLASS ID LCP classBlock . RCP SEMICOL
    (62) classBlock -> classBlock . classEnd
    (64) classEnd -> . access COLON classStatements
    (65) classEnd -> . empty
    (66) access -> . PRIVATE
    (67) access -> . PUBLIC
    (68) access -> . PROTECTED
    (7) empty -> .

  ! shift/reduce conflict for RCP resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
    RCP             shift and go to state 72
    PRIVATE         shift and go to state 54
    PUBLIC          shift and go to state 55
    PROTECTED       shift and go to state 56

  ! RCP             [ reduce using rule 7 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 7 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 7 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 7 (empty -> .) ]

    classEnd                       shift and go to state 73
    access                         shift and go to state 52
    empty                          shift and go to state 53

state 51

    (63) classBlock -> classEnd .

    RCP             reduce using rule 63 (classBlock -> classEnd .)
    PRIVATE         reduce using rule 63 (classBlock -> classEnd .)
    PUBLIC          reduce using rule 63 (classBlock -> classEnd .)
    PROTECTED       reduce using rule 63 (classBlock -> classEnd .)


state 52

    (64) classEnd -> access . COLON classStatements

    COLON           shift and go to state 74


state 53

    (65) classEnd -> empty .

    RCP             reduce using rule 65 (classEnd -> empty .)
